--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,19 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
+/client/node_modules
 /.pnp
 .pnp.js
 
 # testing
-/coverage
+/client/coverage
 
 # next.js
 /.next/
 /out/
 
 # production
-/build
+/client/build
 
 # misc
 .DS_Store
